--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32dev
+board = featheresp32
 framework = arduino
 
 ; Upload and monitor settings
@@ -24,6 +24,8 @@ lib_deps =
 	https://github.com/boschsensortec/Bosch-BSEC2-Library.git#v1.5.2400
 	Wire
 	SPI
+	nanopb
+	Wifi
 	boschsensortec/BME68x Sensor library@^1.3.40408
 ;    boschsensortec/BME68x Sensor
 	knolleary/PubSubClient@^2.8
