--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ framework = arduino
 ; Upload and monitor settings
 upload_speed = 921600
 monitor_speed = 115200
-
+build_flags = -I src/protobuf
 ; Library dependencies
 lib_deps =
 	boschsensortec/BME68x Sensor library@^1.3.40408
@@ -24,10 +24,11 @@ lib_deps =
 	https://github.com/boschsensortec/Bosch-BSEC2-Library.git#v1.5.2400
 	Wire
 	SPI
-	nanopb
+
 	Wifi
 	boschsensortec/BME68x Sensor library@^1.3.40408
 ;    boschsensortec/BME68x Sensor
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.0
 	arduino-libraries/ArduinoMqttClient
+	nanopb/Nanopb_Cpp@^0.1.10
