Update para teste protobuf

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,23 +12,19 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
-
-; Upload and monitor settings
 upload_speed = 921600
 monitor_speed = 115200
 build_flags = -I src/protobuf
-; Library dependencies
-lib_deps =
+lib_deps = 
 	boschsensortec/BME68x Sensor library@^1.3.40408
 	greiman/SdFat@^2.2.3
 	https://github.com/boschsensortec/Bosch-BSEC2-Library.git#v1.5.2400
 	Wire
 	SPI
-
 	Wifi
-	boschsensortec/BME68x Sensor library@^1.3.40408
-;    boschsensortec/BME68x Sensor
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.0
 	arduino-libraries/ArduinoMqttClient
-	nanopb/Nanopb_Cpp@^0.1.10
+	;nanopb/Nanopb_Cpp@^0.1.10
+	;https://github.com/protocolbuffers/protobuf
+	nanopb/Nanopb@^0.4.91
