--- a/platformio.ini
+++ b/platformio.ini
@@ -1,21 +1,11 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:esp32dev]
+[env:featheresp32]
 platform = espressif32
 board = featheresp32
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 build_flags = -I src/protobuf
-lib_deps = 
+lib_deps =
 	boschsensortec/BME68x Sensor library@^1.3.40408
 	greiman/SdFat@^2.2.3
 	https://github.com/boschsensortec/Bosch-BSEC2-Library.git#v1.5.2400
@@ -26,3 +16,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.0
 	arduino-libraries/ArduinoMqttClient
 	nanopb/Nanopb@^0.4.91
+	sylvainmontagny/LoRaWAN-Seeed-Grove-Wio-E5@^3.0.0
+	mikalhart/TinyGPSPlus@^1.1.0
+	plerup/EspSoftwareSerial
+    SD
